# server

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yml
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/guards/: auth.rs  kyc.rs  mod.rs
src/models/: category.rs  job.rs  kyc.rs  mod.rs  otp.rs  review.rs  service.rs  subscription.rs  user.rs  worker.rs
src/routes/: admin.rs  auth.rs  category.rs  file_upload.rs  job.rs  kyc.rs  mod.rs  review.rs  service.rs  user.rs  worker.rs
src/services/: email.rs  jwt.rs  mod.rs  msg91.rs  razorpay.rs
src/utils/: mod.rs  response.rs  validation.rs
