[package]
name = "mento-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["mongodb"] }
mongodb = "2.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
lettre = "0.11"
rand = "0.8"
dotenvy = "0.15"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }

# Swagger/OpenAPI
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
indexmap = "2.12.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
data-encoding = "2.9.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
